Updated an MPC Implementation

--- a/thuthesis/data/appendix01.tex
+++ b/thuthesis/data/appendix01.tex
@@ -1,6 +1,7 @@
 \chapter{外文资料的书面翻译}
 
-\title{Secure Multiparty Computation Goes Live}
+\title{\large Secure Multiparty Computation Goes Live}
+\title{\small Peter Bogetoft, Dan Lund Christense, Ivan Damg\aa rd, Martin Geisler, Thomas Jakobsem,\\Mikkel Kroigaard, Janus Dam Nielsen, Jesper Buus Nielsen, Kurt Nielsen, Jakob Pagter,\\Michael Schwartzbach, Tomas Toft}
 
 {\heiti 摘要：} 2008年1月我们进行了多方安全计算的首次大范围的实际应用，本文就此次应用及其中所采用的密码学方法进行报告。
 
@@ -121,10 +122,12 @@ $$\deg(g)\leq 1,g_j(0)=x_j,g_j(a)=share_{a,j}.$$
 {\heiti 加法和乘法：}在输入阶段后，所有的数字通过次数不超过$t$的多项式进行共享。我们可以通过标准协议来实现加法和乘法，并保持不变性质：$\mathbb{F}$中存储在寄存器中的数字和真实协议中秘密共享的数字保持一致。作用在输入$[a],[b]$上的加法运算可以通过令所有服务器本地执行加法运算来完成。显然$[a]+[b]=[a+b]$，因为秘密共享的算法时线性的。类似地，乘以一个常数可以通过所有服务器将它持有的共享呈上这个公共常数来完成。对于一般的乘法，服务器$P_i$先计算输入$a,b$的共享乘积$d_i=a_ib_i$，$P_i$向所有服务器分发共享$d_i$并得到$[d_i]$。最终，所有服务器计算$[ab]=\sum_i \lambda_i[d_i]$，其中$\lambda_i$是拉格朗日插值的系数。对任意不超过$n-1$的多项式$g$，其满足$g(0)=\sum_i \lambda_ig(i)$。由于$2t\leq n-1$，所以该插值可以用于重建$[ab]$。
 
 {\heiti 随机比特：}我们用一个技巧[13]来实现函数RandomBit。所有的服务器秘密分别共享一个随机量，然后在本地对它们求和得到一个未知的随机数$[u]$。然后我们计算$[v]=[u^2\mod p]$并公开$v$。如果$v=0$那么重新再计算一次。否则继续公开地计算$v$的平方根$w$，并约定选择较小的那一个。接下来计算$w^{-1}[u]\mod p$，这个数会以$1/2$的概率为1以及$1/2$的概率为-1。因此$[(w^{-1}u+1)2^{-1}\mod p]$将给出我们需要的随机比特。
+\newline
 
-\textbf{引理1.} 如果所使用加密是语义安全的且$PRF$也是安全的，那么上述的协议在如下意义下安全地实现了$\mathbb{F}'$：攻击的对手是静态的、被动的，其可以破坏任意数量的客户端以及至多$t$台服务器。
+\noindent\textbf{引理1.} 如果所使用加密是语义安全的且$PRF$也是安全的，那么上述的协议在如下意义下安全地实现了$\mathcal{F}'$：攻击的对手是静态的、被动的，其可以破坏任意数量的客户端以及至多$t$台服务器。
 
 证明略。
+\newline
 
 {\heiti 无需信任客户端的输入：} 上述方法无论客户端做什么都能产生一致的共享数字，但原则上客户端可能发送很大的数字，这可能会导致计算失败。我们可以防止这种情况发生，即我们将伪随机值$F_{K_i}（j）$的大小设为$l+\kappa$比特，选择$p$的长度为$2(l+\kappa+\log T)$比特，其中$T$是最大无危胁集$A$的数目，其余则按照上述相同协议发送输入。
 
@@ -134,7 +137,7 @@ $$\deg(g)\leq 1,g_j(0)=x_j,g_j(a)=share_{a,j}.$$
 顺便说一下，我们注意到，可以证明，发送不增加或减少的出价不会增加竞标者的优势，因此无论如何这都是一个小问题。
 
 \subsection{加入安全比较功能}
-接下来需要给出如何安全地比较数字。我们将基于对$\mathbb{F}'$的访问来完成这件事。这样结合上一节的结果以及UC合成定理我们就得到了想要的$\mathbb{F}$的实现。注意我们将要比较的数字被假设为具有至多$l$位，而用于秘密共享的素数为$l+\kappa$位长。在如下的协议描述中，我们将对象的算术写作$[d]$。在这个协议中，我们假设可以访问$\mathbb{F}'$，这被理解位一个被$\mathbb{F}'$持有的存有$d$寄存器。在实际的视线中，$[d]$将会是一个$d$的秘密共享。
+接下来需要给出如何安全地比较数字。我们将基于对$\mathcal{F}'$的访问来完成这件事。这样结合上一节的结果以及UC合成定理我们就得到了想要的$\mathbb{F}$的实现。注意我们将要比较的数字被假设为具有至多$l$位，而用于秘密共享的素数为$l+\kappa$位长。在如下的协议描述中，我们将对象的算术写作$[d]$。在这个协议中，我们假设可以访问$\mathbb{F}'$，这被理解位一个被$\mathbb{F}'$持有的存有$d$寄存器。在实际的视线中，$[d]$将会是一个$d$的秘密共享。
 
 我们定义一个作用在比特对上的运算$\diamond$为
 $$
@@ -162,7 +165,60 @@ $$
 	\begin{enumerate}
 		\item 对于$i=0,\dots,l+\kappa+1$，调用RandomBit生成$[r_i]$，其中$r_i\in\{0,1\}$是二元随机数。计算$[r]=\sum_i2^i[r_i]$。
 		\item 
-		计算$[a]=2^{l+\kappa+1}-[r]+2^l+[d]-[s]$。公开
+		计算$[a]=2^{l+\kappa+1}-[r]+2^l+[d]-[s]$。公开$a$，然后计算$a$的各位$a_i$。
+		\item 
+		计算$a+r=2^{l+\kappa+1}+2^l+d-s$的第$l$位。注意我们现在得到了$a$和$[r_i]$。计算
+		$$
+		\begin{pmatrix}
+		[z]\\ [Z]
+		\end{pmatrix}
+		=
+		\begin{pmatrix}
+		[a_{l-1}\oplus r_{l-1}]\\
+		[a_{l-1}]
+		\end{pmatrix}
+		\diamond \dots \diamond
+		\begin{pmatrix}
+		[a_0\oplus r_0]\\
+		[a_0]
+		\end{pmatrix}
+		\diamond
+		\begin{pmatrix}
+		0\\0
+		\end{pmatrix}。
+		$$
+		得到的$Z$恰好是计算加法$a+r$时在第$l$位的进位。
+		\item 计算$[res]=a_l\oplus [r_l]\oplus [Z]$。公开并输出结果$res$。
 	\end{enumerate}
 	\end{minipage}
 }
+
+设计这个协议的一些直觉：比较数值$d$和$s$时，很容易看出比较结果是从$2^l+d-s$的第$l$位开始（从0开始计数）。该位分两步提取：首先将问题转换涉及数字的二进制表示可用的问题。而这个转换后的问题可以很容易地解决。
+\newline
+
+\noindent\textbf{引理2：}假设我们可以访问功能$\mathcal{F}'$，那么如上的比较协议在$O(\log l)$轮内实现了统计安全的比较运算。
+
+证明略
+\newline
+
+\noindent\textbf{定理1：}假设如上协议所使用的加密算法是词义安全的且所使用的PRF是安全的，那么用来实现$\mathcal{F}'$的协议结合用来实现$\mathcal{F}$的比较协议可以抵抗包含任意多客户端和至多$t$台服务器的静态被动攻击。
+\newline
+
+\textbf{一个提高效率的技巧：}我们可以更高效地计算二进制数值的比较操作。具体做法是，向$\mathcal{F}'$添加一个命令，在给定包含二进制值的寄存器$[r_i]$时，生成一个包含相同二进制值的新寄存器，但现在将其解释为一个在$GF(2^8)$中的元素，表示为$[r_i]_{256}$。$\oplus$操作现在只是$GF(2^8)$中的加法。这背后的想法是我们将实现$[ri]_{256}$作为在域$GF(2^8)$是共享，以确保安全$\oplus$只是一个本地加法，所以比以前快得多。这将$\diamond$操作减少为单轮，意味着重复应用将只需要$\log(32)=5$轮，远少于原来的10轮。
+
+现在只剩下如何进行转换的问题。我们通过让每个服务器产生$[s_j],[b_j]_{256}$来做到这一点。现在（统计）安全地公开$r_i+\sum_j s_j$。这个数字中最低位等于$r_i\oplus b_1\oplus\dots\oplus b_n$。把它加到$[b_1\oplus\dots\oplus b_n]_{256}$得到$[ri]_{256}$。
+
+我们将其安全性的正式证明留给读者。
+
+\section{结论}
+我们与拍卖系统有多成功，这项技术是否在实践中具有更大的潜力？
+
+除了系统能够正常工作并产生正确结果之外，值得注意的是，在线调查中约80％的受访者表示，对他们来说出价的保密对于他们很重要，因此他们对系统所带来的保密性感到很满意。当然，我们不应该将其解释为对他们对我们所选择的技术解决方案的支持，大多数农民并不知道多方计算是什么。虽然如此，有趣的是，保密性仍然被认为是重要的。虽然有时有人声称是普通人不会关心安全问题，但我们相信他们有时候会很在意，特别是涉及到钱的时候。当其他参与者涉及到明显与之相关的冲突利益关系时，则更是如此。例如，鉴于甜菜市场的历史，毫无疑问，对农民来说“保密”包括了对丹尼斯克的保密性。 Danisco和DKS很满意该系统，在撰写本文时，拍卖已经第二次成功运行。
+
+在实验进行中，我们认可了多方合作的能力。把所有不打算公开的东西保密，在实践中非常有用。如之前讨论的，它避免了去讨论哪些部分的数据是敏感的以及处理这些数据应该有哪些共识的安全政策的麻烦。
+
+有人会认为使用安全硬件可以实现同样的效果：只需保密地发送所有输入数据到设备然后进行内部计算，并输出结果。表面上，这似乎是一个非常简单的解决方案，也可以保护所有私人数据。然而，仔细观察就会发现，不难看出即使人们相信物理保护不能被破坏，硬件解决方案所能够实现完全不同于多方计算。：请注意，此时我们系统的一些组成部分（硬件盒）仍然可以明文访问所有私人数据。如果我们是在谈论一个抽象的理想功能，这不会是一个问题。但现实中一个的硬件盒就是一个系统组件，像别的组件那样，它必须安全地被安装，管理，更新，备份等。这必须在一个各方达成一致的安全政策下进行，并且各方必须相信管理员严格按照政策操作。如果参与者具有冲突的利益关系，达成协议可能会耗时，高成本，甚至是不可能的。我们认为安全硬件更加自然的使用方式是用来提高其本身的安全性，即他的系统所泄漏的信息只有协议中所需的消息。
+
+MPC的另一个标准的替代品是雇用一个值得信赖的中间方，如顾问机构来进行计算。我们之前说过，在我们的情况下，参与者不愿意这样做因为它的成本昂贵得多。当然，人们可以声称这只是因为另一种方法（即我们的方法）是让一个研究团队出于实验目的去免费完成整个项目，而这并没有表明MPC在商业上可行。虽然这个实验没有产生一个商业计划，我们希望指出，一个基于MPC的解决方案只需要开发一次，而这个成本可以在许多应用程序中摊销。在某些情况下，甚至可能不需要进行适配。例如，在甜菜拍卖的例子中，相同的拍卖很可能将在一段时期内每年运行一次。
+
+总之，我们预计未来多方计算将在许多实际情况中变得有用。
