--- a/thuthesis/main.tex
+++ b/thuthesis/main.tex
@@ -9,6 +9,8 @@
 
 % 所有其它可能用到的包都统一放到这里了，可以根据自己的实际添加或者删除。
 \usepackage{thuthesis}
+\usepackage{subcaption}
+% \includeonly{data/chap03}
 
 % 定义所有的图片文件在 figures 子目录下
 \graphicspath{{figures/}}
@@ -32,10 +34,15 @@
 \input{data/denotation}
 
 
+
 %%% 正文部分
 \mainmatter
 \include{data/chap01}
 \include{data/chap02}
+\include{data/chap03}
+\include{data/chap04}
+\include{data/chap05}
+\include{data/chap06}
 
 
 %%% 其它部分
@@ -69,7 +76,7 @@
 \end{appendix}
 
 %% 个人简历
-\include{data/resume}
+% \include{data/resume}
 
 %% 本科生进行格式审查是需要下面这个表格，答辩可能不需要。选择性留下。
 % 综合论文训练记录表
