--- a/thuthesis/ref/refs.bib
+++ b/thuthesis/ref/refs.bib
@@ -1,224 +1,162 @@
-@book{IEEE-1363,
-  author =       {{IEEE Std 1363-2000}},
-  title =        {{IEEE} Standard Specifications for Public-Key Cryptography},
-  address =      {New York},
-  publisher =    {IEEE},
-  year =         2000
+@misc{
+	chen2018using,
+	title={Using Deep Reinforcement Learning to Generate Rationales for Molecules},
+	author={Benson Chen and Connor Coley and Regina Barzilay and Tommi Jaakkola},
+	year={2018},
+	url={https://openreview.net/forum?id=HkJ1rgbCb},
+}
+@article{DBLP:journals/corr/OlivecronaBEC17,
+	author    = {Marcus Olivecrona and
+	Thomas Blaschke and
+	Ola Engkvist and
+	Hongming Chen},
+	title     = {Molecular De Novo Design through Deep Reinforcement Learning},
+	journal   = {CoRR},
+	volume    = {abs/1704.07555},
+	year      = {2017},
+	url       = {http://arxiv.org/abs/1704.07555},
+	archivePrefix = {arXiv},
+	eprint    = {1704.07555},
+	timestamp = {Wed, 07 Jun 2017 14:42:03 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/OlivecronaBEC17},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article {Jagadeesh692,
+	author = {Jagadeesh, Karthik A. and Wu, David J. and Birgmeier, Johannes A. and Boneh, Dan and Bejerano, Gill},
+	title = {Deriving genomic diagnoses without revealing patient genomes},
+	volume = {357},
+	number = {6352},
+	pages = {692--695},
+	year = {2017},
+	doi = {10.1126/science.aam9710},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Although data-sharing is crucial for making the best use of genetic data in diagnosing disease, many individuals who might donate data are concerned about privacy. Jagadeesh et al. describe a solution that combines a protocol from modern cryptography with frequency-based clinical genetics used to diagnose causal disease mutations in patients with monogenic disorders. This framework correctly identified the causal gene in cases involving actual patients, while protecting more than 99\% of individual participants{\textquoteright} most private variants.Science, this issue p. 692Patient genomes are interpretable only in the context of other genomes; however, genome sharing enables discrimination. Thousands of monogenic diseases have yielded definitive genomic diagnoses and potential gene therapy targets. Here we show how to provide such diagnoses while preserving participant privacy through the use of secure multiparty computation. In multiple real scenarios (small patient cohorts, trio analysis, two-hospital collaboration), we used our methods to identify the causal variant and discover previously unrecognized disease genes and variants while keeping up to 99.7\% of all participants{\textquoteright} most sensitive genomic information private.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/357/6352/692},
+	eprint = {http://science.sciencemag.org/content/357/6352/692.full.pdf},
+	journal = {Science}
+}
+@article {Wan086033,
+	author = {Wan, Fangping and Zeng, Jianyang},
+	title = {Deep learning with feature embedding for compound-protein interaction prediction},
+	year = {2016},
+	doi = {10.1101/086033},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Accurately identifying compound-protein interactions in silico can deepen our understanding of the mechanisms of drug action and significantly facilitate the drug discovery and development process. Traditional similarity-based computational models for compound-protein interaction prediction rarely exploit the latent features from current available large-scale unlabelled compound and protein data, and often limit their usage on relatively small-scale datasets. We propose a new scheme that combines feature embedding (a technique of representation learning) with deep learning for predicting compound-protein interactions. Our method automatically learns the low-dimensional implicit but expressive features for compounds and proteins from the massive amount of unlabelled data. Combining effective feature embedding with powerful deep learning techniques, our method provides a general computational pipeline for accurate compound-protein interaction prediction, even when the interaction knowledge of compounds and proteins is entirely unknown. Evaluations on current large-scale databases of the measured compound-protein affinities, such as ChEMBL and BindingDB, as well as known drug-target interactions from DrugBank have demonstrated the superior prediction performance of our method, and suggested that it can offer a useful tool for drug development and drug repositioning.},
+	URL = {https://www.biorxiv.org/content/early/2016/11/07/086033},
+	eprint = {https://www.biorxiv.org/content/early/2016/11/07/086033.full.pdf},
+	journal = {bioRxiv}
+}
+@book{cramer2015secure,
+	title={Secure Multiparty Computation},
+	author={Cramer, R. and Damg{\aa}rd, I.B. and Nielsen, J.B.},
+	isbn={9781107043053},
+	lccn={2015002282},
+	url={https://books.google.com/books?id=HpsZCgAAQBAJ},
+	year={2015},
+	publisher={Cambridge University Press}
 }
 
-@inproceedings{kocher99,
-  author =       {C. Kocher and J. Jaffe and B. Jun},
-  title =        {Differential Power Analysis},
-  editor =       {M. Wiener},
-  booktitle =    {Advances in Cryptology ({CRYPTO}~'99)},
-  series =       {Lecture Notes in Computer Science},
-  volume =       1666,
-  pages =        {388-397},
-  publisher =    {Springer-Verlag},
-  month =        {August},
-  year =         1999
+@online{github/genome-privacy,
+	author = {Jagadeesh, Karthik A. and Wu, David J. and Birgmeier, Johannes A. and Boneh, Dan and Bejerano, Gill},
+	title = {genome-privacy},
+	date = {2017,Aug 29},
+	url = {https://github.com/dwu4/genome-privacy},
+}
+@InProceedings{10.1007/11889663_10,
+	author="Bogetoft, Peter
+	and Damg{\aa}rd, Ivan
+	and Jakobsen, Thomas
+	and Nielsen, Kurt
+	and Pagter, Jakob
+	and Toft, Tomas",
+	editor="Di Crescenzo, Giovanni
+	and Rubin, Avi",
+	title="A Practical Implementation of Secure Auctions Based on Multiparty Integer Computation",
+	booktitle="Financial Cryptography and Data Security",
+	year="2006",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="142--147",
+	abstract="In this paper we consider the problem of constructing secure auctions based on techniques from modern cryptography. We combine knowledge from economics, threshold cryptography and security engineering to implement secure auctions for practical real-world problems.",
+	isbn="978-3-540-46256-9"
+}
+@InProceedings{10.1007/978-3-642-03549-4_20,
+	author="Bogetoft, Peter
+	and Christensen, Dan Lund
+	and Damg{\aa}rd, Ivan
+	and Geisler, Martin
+	and Jakobsen, Thomas
+	and Kr{\o}igaard, Mikkel
+	and Nielsen, Janus Dam
+	and Nielsen, Jesper Buus
+	and Nielsen, Kurt
+	and Pagter, Jakob
+	and Schwartzbach, Michael
+	and Toft, Tomas",
+	editor="Dingledine, Roger
+	and Golle, Philippe",
+	title="Secure Multiparty Computation Goes Live",
+	booktitle="Financial Cryptography and Data Security",
+	year="2009",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="325--343",
+	abstract="In this note, we report on the first large-scale and practical application of secure multiparty computation, which took place in January 2008. We also report on the novel cryptographic protocols that were used.",
+	isbn="978-3-642-03549-4"
+}
+@article{mpcintro,
+	author = {Ronald Cramer and Ivan Damg{\aa}rd},
+	title = {Multiparty Computation, an Introduction}
+}
+@article{CERETOMASSAGUE201558,
+	title = "Molecular fingerprint similarity search in virtual screening",
+	journal = "Methods",
+	volume = "71",
+	pages = "58 - 63",
+	year = "2015",
+	note = "Virtual Screening",
+	issn = "1046-2023",
+	doi = "https://doi.org/10.1016/j.ymeth.2014.08.005",
+	url = "http://www.sciencedirect.com/science/article/pii/S1046202314002631",
+	author = "Adrià Cereto-Massagué and María José Ojeda and Cristina Valls and Miquel Mulero and Santiago Garcia-Vallvé and Gerard Pujadas",
+	keywords = "Fingerprints, Virtual screening, Similarity search, Data fusion, Comparison",
+	abstract = "Molecular fingerprints have been used for a long time now in drug discovery and virtual screening. Their ease of use (requiring little to no configuration) and the speed at which substructure and similarity searches can be performed with them – paired with a virtual screening performance similar to other more complex methods – is the reason for their popularity. However, there are many types of fingerprints, each representing a different aspect of the molecule, which can greatly affect search performance. This review focuses on commonly used fingerprint algorithms, their usage in virtual screening, and the software packages and online tools that provide these algorithms."
+}
+@unknown{intro_to_mpc,
+author = {Cramer, Ronald and Damgård, Ivan and Catalano, Dario and Di Crescenzo, Giovanni and Darmgård, Ivan and Pointcheval, David and Takagi, Tsuyoshi},
+year = {2006},
+month = {03},
+pages = {41-87},
+title = {Multiparty Computation, an Introduction}
+}
+@MISC{Stewart92onthe,
+	author = {G. W. Stewart},
+	title = {On the Early History of the Singular Value Decomposition},
+	year = {1992}
+}
+@InProceedings{10.1007/978-3-642-03549-4_20,
+author="Bogetoft, Peter
+and Christensen, Dan Lund
+and Damg{\aa}rd, Ivan
+and Geisler, Martin
+and Jakobsen, Thomas
+and Kr{\o}igaard, Mikkel
+and Nielsen, Janus Dam
+and Nielsen, Jesper Buus
+and Nielsen, Kurt
+and Pagter, Jakob
+and Schwartzbach, Michael
+and Toft, Tomas",
+editor="Dingledine, Roger
+and Golle, Philippe",
+title="Secure Multiparty Computation Goes Live",
+booktitle="Financial Cryptography and Data Security",
+year="2009",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="325--343",
+abstract="In this note, we report on the first large-scale and practical application of secure multiparty computation, which took place in January 2008. We also report on the novel cryptographic protocols that were used.",
+isbn="978-3-642-03549-4"
 }
 
-@incollection{Krasnogor2004e,
-  author =       {N. Krasnogor},
-  title =        {Towards robust memetic algorithms},
-  booktitle =    {Recent Advances in Memetic Algorithms},
-  publisher =    {Springer Berlin Heidelberg},
-  year =         2004,
-  pages =        {185-207},
-  editor =       {W.E. Hart and N. Krasnogor and J.E. Smith},
-  volume =       166,
-  series =       {Studies in Fuzziness and Soft Computing},
-  address =      {New York},
-}
-
-@incollection{zjsw,
-  author =       {班固},
-  title =        {苏武传},
-  booktitle =    {传记散文英华},
-  publisher =    {湖北人民出版社},
-  year =         1998,
-  pages =        {65-69},
-  editor =       {郑在瀛 and 汪超宏 and 周文复},
-  volume =       2,
-  series =       {新古文观止丛书},
-  address =      {武汉},
-  language =     "chinese",
-}
-
-@inbook{clzs,
-  author =       {阎真},
-  title =        {沧浪之水},
-  chapter =      {大人物还是讲人情的},
-  pages =        {185-207},
-  publisher =    {人民文学出版社},
-  year =         2001,
-  language =     "chinese",
-}
-
-@book{tex,
-  author =       "Donald E. Knuth",
-  title =        "The {\TeX} Book",
-  publisher =    "Addison-Wesley Publishing Company",
-  address =      "Reading, MA",
-  year =         1989,
-  edition =      "15th",
-}
-
-@book{companion,
-  author =       "Michel Goosens and Frank Mittelbach and Alexander Samarin",
-  title =        "The {\LaTeX} Companion",
-  publisher =    "Addison-Wesley Publishing Company",
-  address =      "Reading, MA",
-  PAGES =        "112--125",
-  year =         1994,
-}
-
-@article{ELIDRISSI94,
-  author =       "{Chafik El Idrissi}, M. and {Roney}, A. and {Frigon}, C. and
-                  {Larzilli{\`e}re}, M.",
-  title =        "Measurements of total kinetic-energy released to the {$N=2$}
-                  dissociation limit of {H}$_2$ --- evidence of the dissociation
-                  of very high vibrational {R}ydberg states of {H}$_2$ by
-                  doubly-excited states",
-  journal =      "Chemical Physics Letters",
-  pages =        "260-266",
-  volume =       224,
-  number =       10,
-  year =         1994,
-}
-
-@article{MELLINGER96,
-  author =       "Mellinger, A. and Vidal, C. R. and Jungen, Ch.",
-  title =        "Laser reduced fluorescence study of the carbon-monoxide nd
-                  triplet {R}ydberg series-experimental results and multichannel
-                  quantum-defect analysis",
-  journal =      "J. Chem. Phys.",
-  pages =        "8913-8921",
-  volume =       104,
-  number =       5,
-  year =         1996,
-}
-
-@article{SHELL02,
-  author =       "Michael Shell",
-  title =        "How to Use the {IEEEtran \LaTeX} Class",
-  journal =      "Journal of {\LaTeX} Class Files",
-  year =         2002,
-  volume =       12,
-  number =       4,
-  pages =        "100--120"
-}
-
-@TechReport{NPB2,
-  title =        {The {NAS} Parallel Benchmarks 2.0},
-  author =       {Alex Woo and David Bailey and Maurice Yarrow and Wijngaart
-                  Wijngaart and Tim Harris and William Saphir},
-  year =         1995,
-  month =        dec # "~05",
-  institution =  "The Pennsylvania State University CiteSeer Archives",
-  url =          "http://www.nasa.org/"
-}
-
-@inproceedings{DPMG,
-  author =       {Kim, Sangbum and Woo, Namyoon and Yeom, Heon Y. and Park,
-                  Taesoon and Park, Hyoungwoo},
-  title =        {Design and {I}mplementation of {D}ynamic {P}rocess
-                  {M}anagement for {G}rid-enabled {MPICH}},
-  booktitle =    {the 10th European PVM/MPI Users' Group Conference},
-  year =         2003,
-  address =      {Venice, Italy},
-  month =        sep,
-}
-
-@inproceedings{cnproceed,
-  author =       {王重阳 and 黄药师 and 欧阳峰 and 洪七公 and 段皇帝},
-  title =        {武林高手从入门到精通},
-  booktitle =    {第~$N$~次华山论剑},
-  year =         2006,
-  address =      {西安, 中国},
-  month =        sep,
-  language =     "chinese",
-}
-
-@article{cnarticle,
-  author =       "贾宝玉 and 林黛玉 and 薛宝钗 and 贾探春",
-  title =        "论刘姥姥食量大如牛之现实意义",
-  journal =      "红楼梦杂谈",
-  pages =        "260--266",
-  volume =       224,
-  year =         1800,
-  language =     "chinese",
-}
-
-@mastersthesis{zhubajie,
-  author =       {猪八戒},
-  title =        {论流体食物的持久保存},
-  school =       {广寒宫大学},
-  year =         2005,
-  address =      {北京},
-  language =     "chinese",
-}
-
-@phdthesis{shaheshang,
-  author =       {沙和尚},
-  title =        {论流沙河的综合治理},
-  school =       {清华大学},
-  year =         2005,
-  address =      {北京},
-  language =     "chinese",
-}
-
-@mastersthesis{metamori2004,
-  author =       {Ashwin Raju Jeyakumar},
-  title =        {Metamori: A library for Incremental File Checkpointing},
-  school =       {Virgina Tech},
-  year =         2004,
-  month =        jun # "~21",
-  address =      {Blacksburg},
-}
-
-@phdthesis{FistSystem01,
-  author =       "Erez Zadok",
-  title =        "{FiST: A System for Stackable File System Code Generation}",
-  year =         2001,
-  month =        "May",
-  school =       "Computer Science Department, Columbia University",
-  address =      "USA"
-}
-
-@inbook{ColdSources,
-  author =       {P. Gr{\"o}ning and L. Nilsson and P. Ruffieux and R.
-                  Clergereaux and O. Gr{\"o}ning},
-  title =        {Encyclopedia of Nanoscience and Nanotechnology},
-  pages =        {547--579},
-  publisher =    {American Scientific Publishers},
-  year =         2004,
-  volume =       1,
-}
-
-@online{chuban2001,
-  author =      {萧钰},
-  title =       {出版业信息化迈入快车道},
-  modifydate =  {2001-12-19},
-  citedate =    {2002-04-15},
-  url =         {http://www.creader.com/news/200112190019.htm},
-  language =    "chinese",
-}
-
-@online{oclc2000,
-  author =      {{Online Computer Library Center, Inc.}},
-  title =       {History of {OCLC}},
-  citedate =    {2000-01-08},
-  url =         {http://www.oclc.org/about/history/default.htm},
-}
-
-
-@online{thuthesis,
-  author =      {薛瑞尼},
-  title =       {\thuthesis: 清华大学学位论文模板},
-  citedate =    {2017-12-02},
-  url =         {https://github.com/xueruini/thuthesis},
-  language =    "chinese",
-  year =        2017,
-}
