--- a/thuthesis/data/appendix01.tex
+++ b/thuthesis/data/appendix01.tex
@@ -1,5 +1,6 @@
 \chapter{外文资料的书面翻译}
 
+
 \title{\large Secure Multiparty Computation Goes Live}
 \title{\small Peter Bogetoft, Dan Lund Christense, Ivan Damg\aa rd, Martin Geisler, Thomas Jakobsem,\\Mikkel Kroigaard, Janus Dam Nielsen, Jesper Buus Nielsen, Kurt Nielsen, Jakob Pagter,\\Michael Schwartzbach, Tomas Toft}
 
@@ -7,11 +8,11 @@
 
 \section{引言及历史}
 在多方计算（MPC）中，我们考虑了一系列参与者 $P_1,\dots,P_n$. 每个人
-一开始持有输入 $x_1,\dots,x_n$，我们想在这些输入上安全地计算一个函数 $f$ 满足$f(x_1,\dots,x_n)=（y_1,\dots,y_n）$，使得$P_i$可以得到$y_i$但无法获得其他信息。我们允许参与者表现出一定程度的敌对行为而这个性质依然成立。这个目标可以通过让所有参与者遵从某个协议$\pi$进行交互来实现。直觉上来说，我们希望执行$\pi$等价于有一个被信任方$T$先从$P_i$私下接收$x_i$，然后计算函数$f$，并最后将$y_i$返回给每个$P_i$。有了这样的协议，我们原则上可以解决几乎所有的密码协议问题。MPC的一般理论始于80年代后期[16,3,7]。这个理论后来被发展出有几种实现方式（例如[21,18,8]）。可以在[6]中找到已知理论结果的概述。
+一开始持有输入 $x_1,\dots,x_n$，我们想在这些输入上安全地计算一个函数 $f$ 满足$f(x_1,\dots,x_n)=（y_1,\dots,y_n）$，使得$P_i$可以得到$y_i$但无法获得其他信息。我们允许参与者表现出一定程度的敌对行为而这个性质依然成立。这个目标可以通过让所有参与者遵从某个协议$\pi$进行交互来实现。直觉上来说，我们希望执行$\pi$等价于有一个被信任方$T$先从$P_i$私下接收$x_i$，然后计算函数$f$，并最后将$y_i$返回给每个$P_i$。有了这样的协议，我们原则上可以解决几乎所有的密码协议问题。MPC的一般理论始于80年代后期\citesec{1987,Ben-Or:1988:CTN:62212.62213,Chaum:1988:MUS:62212.62214}。这个理论后来被发展出有几种实现方式（例如\citesec{10.1007/978-3-540-72540-4_24,Hirt:1997:CCA:259380.259412}）。可以在\citesec{intro_to_mpc}中找到已知理论结果的概述。
 
-尽管MPC在解决许多的问题方面具有明显的潜力，但我们可以看到在过去几乎没有MPC的实际应用。这可能部分是由于以下事实：直接实施原始的通用MPC协议将导致解决方案非常低效。另一个因素则是广大公众长期对该技术潜力的普遍缺乏理解。事实上大量的研究已经用于解决效率问题，包括通用协议[11,17,9]以及诸如投票等特殊类型的计算[4,12]。
+尽管MPC在解决许多的问题方面具有明显的潜力，但我们可以看到在过去几乎没有MPC的实际应用。这可能部分是由于以下事实：直接实施原始的通用MPC协议将导致解决方案非常低效。另一个因素则是广大公众长期对该技术潜力的普遍缺乏理解。事实上大量的研究已经用于解决效率问题，包括通用协议\citesec{10.1007/978-3-540-45146-4_15,Gennaro1998SimpliiedVA}以及诸如投票等特殊类型的计算\citesec{10.1007/3-540-69053-0_9}。
 
-另一个不同的研究路线明确地关注一系列经济应用，这对于实际应用特别有帮助。例如，两个本文作者参与的项目就采取了这种方法：SCET（Secure Computing, Economy and Trust）2和SIMAP（Secure Information Management and Processing）。它们在本文中被用于描述MPC的实际应用。在经济领域的机制设计中，一个值得信赖的第三方的概念自70年代以来一直是一个重要的假设[15,19,10]。自从该领域诞生以来，它的发展势头迅猛，变成了一个真正的交叉学科。今天，许多实际的机制设计需要一个值得信赖的第三方是很自然的考虑。而MPC提供了实现这一点的一种可能性。特别地，我们考察过一下这些场景：
+另一个不同的研究路线明确地关注一系列经济应用，这对于实际应用特别有帮助。例如，两个本文作者参与的项目就采取了这种方法：SCET（Secure Computing, Economy and Trust）2和SIMAP（Secure Information Management and Processing）。它们在本文中被用于描述MPC的实际应用。在经济领域的机制设计中，一个值得信赖的第三方的概念自70年代以来一直是一个重要的假设\citesec{RePEc:ecm:emetrp:v:41:y:1973:i:4:p:587-601,31320}。自从该领域诞生以来，它的发展势头迅猛，变成了一个真正的交叉学科。今天，许多实际的机制设计需要一个值得信赖的第三方是很自然的考虑。而MPC提供了实现这一点的一种可能性。特别地，我们考察过一下这些场景：
 \begin{itemize}
 	\item 由于各种原因需要进行密封投标的许多类型的拍卖。 其中最著名的可能是密封投标的标准最高出价拍卖。而另一个考虑成交额的常见拍卖类型是许多卖家和买家参与的所谓的双向拍卖。 这种拍卖用于解决寻到商品的公平市场价格和市场需求。
 	\item 基准测试。多家公司想要整合它们的业务信息，以便将自己与该地区的最佳做法进行比较。基准测试过程被用于学习，计划或别的目的，而这个过程自然必须在保护公司数据私密性的前提下进行。
@@ -20,19 +21,19 @@
 在考虑这样的应用时，人们发现所需的计算基本上是中等规模（如大约32位）整数上的初等算术。更具体地说，在相当广泛的情况中只会用到加法，乘法和整数比较。加法
 和乘法可以通过著名的通用MPC协议相当有效地处理。实际上，因为协议基于$\mathbb{Z}_p$的秘密分享，该协议的做法是选择与输入数字相比足够大的$p$，然后进行模素数$p$的运算。我们可以避免模块化的减少和获得整数加法和乘法。
 
-由于每个数字都是使用线性秘密共享方案来“一件一件”共享的，这种方案有时是高效的。以安全加法为例，每个玩家只需要进行一次本地加法即可。不幸的是，这也意味着比较运算要困难得多。通用的解决方案通过在$\mathbb{Z}_p$上进行算术电路运行来实现比较运算，但由于电路无法直接地访问输入的二进制表达，从而所需的算术电路规模会非常大，以至于其无法成为实际的解决方案。因此我们必须开发用于比较的特殊用途技术。这方面的一个例子是固定轮数的无条件安全的比较协议[13]。
+由于每个数字都是使用线性秘密共享方案来“一件一件”共享的，这种方案有时是高效的。以安全加法为例，每个玩家只需要进行一次本地加法即可。不幸的是，这也意味着比较运算要困难得多。通用的解决方案通过在$\mathbb{Z}_p$上进行算术电路运行来实现比较运算，但由于电路无法直接地访问输入的二进制表达，从而所需的算术电路规模会非常大，以至于其无法成为实际的解决方案。因此我们必须开发用于比较的特殊用途技术。这方面的一个例子是固定轮数的无条件安全的比较协议\citesec{Chaum:1988:MUS:62212.62214}。
 
 \section{主要贡献}
-在本文中，我们报道了使用MPC实施的第一次大规模实际实验 --- 一个安全的拍卖。我们阐述了其应用场景并论证了多方计算是该问题一个很好的解决方案。我们描述并报告了该系统的运作方式。 最后，我们详细阐述了所使用的密码协议并证明了它们的安全性。同时，对于实践中常见的数字规模，我们提出了一个相比[13]更实用的对数循环比较协议。
+在本文中，我们报道了使用MPC实施的第一次大规模实际实验 --- 一个安全的拍卖。我们阐述了其应用场景并论证了多方计算是该问题一个很好的解决方案。我们描述并报告了该系统的运作方式。 最后，我们详细阐述了所使用的密码协议并证明了它们的安全性。同时，对于实践中常见的数字规模，我们提出了一个相比\citesec{Chaum:1988:MUS:62212.62214}更实用的对数循环比较协议。
 
 \section{应用场景}
-在本节中，我们将描述我们系统部署的实际情况。 在[1]中已经初步描述了该场景的计划和小规模演示的结果。
+在本节中，我们将描述我们系统部署的实际情况。 在\citesec{10.1007/11889663_10}中已经初步描述了该场景的计划和小规模演示的结果。
 
 在丹麦，有数千农民生产甜菜，并销售给丹麦市场上唯一的甜菜加工商Danisco。农民们会签署一份合同，该合同规定了他们会向Danisco提供一定数量的甜菜，而丹尼斯克会根据某种定价方案向他们支付一定费用。 这些合同可以在农民间交易，但这样的交易历来非常有限，且主要通过双边协商完成。
 
 但近年来，欧盟大幅减少了对甜菜生产的支持。再加上其他因素，这意味着现在迫切需要重新分配合同给农民以使他们得到最佳的回报。人们意识到，这最好是通过全国范围内的交换完成，即双向拍卖。
 
-{\heiti 市场清算价格}：特定商业案例的详细信息可以在[2]中找到。这里，我们简要总结一下重点，稍后将给出所要进行的实际计算的更多细节。我们的目标是找到所谓的市场清算价格（MCP），即每单位待交易的价格。具体来说，每个买方将给出对于每个可能的价格，他愿意用该价格购买多少数量的商品。同样的，卖家将给出他们愿意在每个可能的价格上卖出多少商品.所有的出价都将交给拍卖商。他们会计算出每种价格下的总供求市场。由于我们可以假设随着价格增加供给增加而需求减少，我们可以找到一个价格使得总的供给等于总的需求，拍卖商将把这个价格作为清算价格。最后，所有的参与者将依照这个清算价格进行交易。
+{\heiti 市场清算价格}：特定商业案例的详细信息可以在\citesec{doi:10.1093/erae/jbm002}中找到。这里，我们简要总结一下重点，稍后将给出所要进行的实际计算的更多细节。我们的目标是找到所谓的市场清算价格（MCP），即每单位待交易的价格。具体来说，每个买方将给出对于每个可能的价格，他愿意用该价格购买多少数量的商品。同样的，卖家将给出他们愿意在每个可能的价格上卖出多少商品.所有的出价都将交给拍卖商。他们会计算出每种价格下的总供求市场。由于我们可以假设随着价格增加供给增加而需求减少，我们可以找到一个价格使得总的供给等于总的需求，拍卖商将把这个价格作为清算价格。最后，所有的参与者将依照这个清算价格进行交易。
 
 {\heiti 使用安全MPC进行投标的保密性}：一个满意的这类拍卖的实现需要考虑到安全问题：投标显然会泄露个人信息，例如农民的经济地位和他的生产力，因此鉴于Danisco在市场上的地位，农民不愿意接受Danisco作为拍卖商。即使Danisco绝不会在正在进行的合同（包括定价方案）再谈判中滥用其所获得的拍卖信息，仅仅对会发生这种情况的担忧可能会影响农民的出价并导致拍卖效果不理想。另一方面，一份合同中的标称数量由Danisco管理（并经常根据欧盟的管理调整）。在某些情况下，合同充当农民对于Danisco债务的担保。因此，独立于Danisco运行拍卖也是不现实的。最后，通过委托法律责任和实际责任给被信任的拍卖人，比如顾问机构，来完成拍卖将会非常昂贵。
 
@@ -90,7 +91,7 @@ $$
 
 {\heiti 非交互式输入:} 第一个问题是现在如何去实现一个客户端输入数字$x_1,\dots,x_P$的命令。最直接的做法是秘密共享每个$x_i$然后用对应服务器的公钥进行加密。由于存在多个服务器，这样做会导致客户端需要发出多倍的信息。
 
-因此我们给出一种非交互式VSSS技术[14]。简洁起见，在这里我们基于我们的具体案例（$n=3$）来描述这种技术。首先我们有3个密钥对$(pk_i,sk_i),i=1,2,3$，服务器$i$持有两个私钥$sk_j,j\neq i$。现在令$f_i(x),i=1,2,3$表示3个次数不超过1的多项式，并满足$f_i(0)=1,f_i(i)=0$。现在可以按如下方式以加密形式传递一系列数字$x_1,\dots,x_P\in\mathbb{P}$给服务器组：
+因此我们给出一种\citesec{10.1007/978-3-540-72540-4_24}中的非交互式VSSS技术。简洁起见，在这里我们基于我们的具体案例（$n=3$）来描述这种技术。首先我们有3个密钥对$(pk_i,sk_i),i=1,2,3$，服务器$i$持有两个私钥$sk_j,j\neq i$。现在令$f_i(x),i=1,2,3$表示3个次数不超过1的多项式，并满足$f_i(0)=1,f_i(i)=0$。现在可以按如下方式以加密形式传递一系列数字$x_1,\dots,x_P\in\mathbb{P}$给服务器组：
 \begin{enumerate}
 	\item 选择伪随机函数（PRF）$F$的三个密钥$K_1,K_2,K_3$。其以指数$j$为输入并输出一个$\mathbb{Z}_p$中的元素。
 	\item 输出加密$E_{pk_i}(K_i),i=1,2,3$.
@@ -121,7 +122,7 @@ $$\deg(g)\leq 1,g_j(0)=x_j,g_j(a)=share_{a,j}.$$
 
 {\heiti 加法和乘法：}在输入阶段后，所有的数字通过次数不超过$t$的多项式进行共享。我们可以通过标准协议来实现加法和乘法，并保持不变性质：$\mathbb{F}$中存储在寄存器中的数字和真实协议中秘密共享的数字保持一致。作用在输入$[a],[b]$上的加法运算可以通过令所有服务器本地执行加法运算来完成。显然$[a]+[b]=[a+b]$，因为秘密共享的算法时线性的。类似地，乘以一个常数可以通过所有服务器将它持有的共享呈上这个公共常数来完成。对于一般的乘法，服务器$P_i$先计算输入$a,b$的共享乘积$d_i=a_ib_i$，$P_i$向所有服务器分发共享$d_i$并得到$[d_i]$。最终，所有服务器计算$[ab]=\sum_i \lambda_i[d_i]$，其中$\lambda_i$是拉格朗日插值的系数。对任意不超过$n-1$的多项式$g$，其满足$g(0)=\sum_i \lambda_ig(i)$。由于$2t\leq n-1$，所以该插值可以用于重建$[ab]$。
 
-{\heiti 随机比特：}我们用一个技巧[13]来实现函数RandomBit。所有的服务器秘密分别共享一个随机量，然后在本地对它们求和得到一个未知的随机数$[u]$。然后我们计算$[v]=[u^2\mod p]$并公开$v$。如果$v=0$那么重新再计算一次。否则继续公开地计算$v$的平方根$w$，并约定选择较小的那一个。接下来计算$w^{-1}[u]\mod p$，这个数会以$1/2$的概率为1以及$1/2$的概率为-1。因此$[(w^{-1}u+1)2^{-1}\mod p]$将给出我们需要的随机比特。
+{\heiti 随机比特：}我们用一个\citesec{Chaum:1988:MUS:62212.62214}中的技巧来实现函数RandomBit。所有的服务器秘密分别共享一个随机量，然后在本地对它们求和得到一个未知的随机数$[u]$。然后我们计算$[v]=[u^2\mod p]$并公开$v$。如果$v=0$那么重新再计算一次。否则继续公开地计算$v$的平方根$w$，并约定选择较小的那一个。接下来计算$w^{-1}[u]\mod p$，这个数会以$1/2$的概率为1以及$1/2$的概率为-1。因此$[(w^{-1}u+1)2^{-1}\mod p]$将给出我们需要的随机比特。
 \newline
 
 \noindent\textbf{引理1.} 如果所使用加密是语义安全的且$PRF$也是安全的，那么上述的协议在如下意义下安全地实现了$\mathcal{F}'$：攻击的对手是静态的、被动的，其可以破坏任意数量的客户端以及至多$t$台服务器。
@@ -222,3 +223,9 @@ $$
 MPC的另一个标准的替代品是雇用一个值得信赖的中间方，如顾问机构来进行计算。我们之前说过，在我们的情况下，参与者不愿意这样做因为它的成本昂贵得多。当然，人们可以声称这只是因为另一种方法（即我们的方法）是让一个研究团队出于实验目的去免费完成整个项目，而这并没有表明MPC在商业上可行。虽然这个实验没有产生一个商业计划，我们希望指出，一个基于MPC的解决方案只需要开发一次，而这个成本可以在许多应用程序中摊销。在某些情况下，甚至可能不需要进行适配。例如，在甜菜拍卖的例子中，相同的拍卖很可能将在一段时期内每年运行一次。
 
 总之，我们预计未来多方计算将在许多实际情况中变得有用。
+
+\bibliographystylesec{plain}
+
+\bibliographysec{ref/appendix}
+
+% \printbibliography[title={Appendix References}]
